[gd_scene load_steps=17 format=3 uid="uid://kjclso7aii3r"]

[ext_resource type="Script" path="res://Scripts/Enemies/enemy_bullet.gd" id="1_c7sl8"]
[ext_resource type="Texture2D" uid="uid://brvpmy0c0jwsi" path="res://Sprites/Bullets/enemy_bullet4.png" id="2_r82oe"]
[ext_resource type="Texture2D" uid="uid://bvbdowigv2yk1" path="res://Sprites/Light/light1.png" id="3_1hw4u"]
[ext_resource type="Texture2D" uid="uid://dl03ttlb24ada" path="res://Sprites/Explosion/explosion1.png" id="9_wstov"]
[ext_resource type="Texture2D" uid="uid://dt4xoaxgrgijr" path="res://Sprites/Explosion/explosion2.png" id="10_5n1g4"]
[ext_resource type="PackedScene" uid="uid://6qqwyt6lrfmo" path="res://Scripts/Visuals/trace.tscn" id="10_6bwnd"]
[ext_resource type="Texture2D" uid="uid://b5gger2f4230r" path="res://Sprites/Explosion/explosion3.png" id="11_s52o1"]
[ext_resource type="Texture2D" uid="uid://bodebyb4vgk07" path="res://Sprites/Explosion/explosion4.png" id="12_usyaq"]
[ext_resource type="Texture2D" uid="uid://biskv30bbbw7q" path="res://Sprites/Explosion/explosion5.png" id="13_k3wsn"]
[ext_resource type="Texture2D" uid="uid://cb2clutnd13pb" path="res://Sprites/Explosion/explosion6.png" id="14_q2d53"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7xgle"]
radius = 15.2861

[sub_resource type="SpriteFrames" id="SpriteFrames_xhhqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r82oe")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_dv2qf"]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_20f2r"]
_data = {
"explosion": SubResource("Animation_dv2qf")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_pfxgj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_wstov")
}, {
"duration": 1.0,
"texture": ExtResource("10_5n1g4")
}, {
"duration": 1.0,
"texture": ExtResource("11_s52o1")
}, {
"duration": 1.0,
"texture": ExtResource("12_usyaq")
}, {
"duration": 1.0,
"texture": ExtResource("13_k3wsn")
}, {
"duration": 1.0,
"texture": ExtResource("14_q2d53")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tvsam"]
radius = 15.6257

[node name="EnemyBullet" type="CharacterBody2D" groups=["bullets"]]
scale = Vector2(0.7, 0.7)
collision_layer = 0
collision_mask = 0
motion_mode = 1
script = ExtResource("1_c7sl8")

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_7xgle")

[node name="BulletCast" type="RayCast2D" parent="."]
position = Vector2(-6.19888e-05, 0.0881703)
scale = Vector2(0.667571, 1.85699)
target_position = Vector2(0, 19.2169)
collide_with_areas = true

[node name="PointLight2D" type="PointLight2D" parent="."]
rotation = 1.57079
scale = Vector2(2.83537, 2.74302)
color = Color(0.72549, 0, 0, 1)
energy = 10.0
texture = ExtResource("3_1hw4u")
texture_scale = 0.03

[node name="Trace" parent="." instance=ExtResource("10_6bwnd")]
show_behind_parent = true
top_level = true
width = 40.0
default_color = Color(0.427451, 0, 0, 1)
end_cap_mode = 2
max_length = 25

[node name="BulletSprite" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1, 1, 0.694118, 1)
light_mask = 2
rotation = 1.57079
sprite_frames = SubResource("SpriteFrames_xhhqd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_20f2r")
}

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.364706)
position = Vector2(0.694444, -0.704225)
scale = Vector2(0.679669, 0.674258)
sprite_frames = SubResource("SpriteFrames_pfxgj")

[node name="RicochetSoundPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.0
pitch_scale = 0.6
max_polyphony = 5

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2.19345e-05, -0.19981)
shape = SubResource("CircleShape2D_tvsam")

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_destruction_timer_timeout"]
